--- a/Version.ini
+++ b/Version.ini
@@ -1,5 +1,5 @@
-version==2.3==version
+version==2.5==version
 notice==
-更新内容：现在可以自动更新了！
+更新内容：2.3：现在可以自动更新了！|2.5：增加删除缓存功能！
 ==notice
-download==https://raw.iqiq.io/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%882.3.exe==download
+download==https://raw.iqiq.io/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%882.5.exe==download
