--- a/Version.ini
+++ b/Version.ini
@@ -1,5 +1,5 @@
-version==2.6==version
+version==2.7==version
 notice==
-更新内容：2.3：现在可以自动更新了！|2.5：增加删除缓存功能！|2.6：优化提示
+更新内容：|2.3：现在可以自动更新了！|2.5：增加删除缓存功能！|2.6：优化提示|2.7：再次优化提示
 ==notice
-download==https://raw.iqiq.io/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%882.6.exe==download
+download==https://raw.iqiq.io/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%882.7.exe==download
