--- a/Version.ini
+++ b/Version.ini
@@ -1,6 +1,6 @@
-version==2.11==version
+version==2.12==version
 notice==
-更新内容：|2.5：增加删除缓存功能！|2.6：优化提示|2.7：再次优化提示|2.9：更改GUI按键布局|2.10：增加保全作业相关及作业相关|2.11：修复2.10产生的无法执行任何操作的BUG
+更新内容：|增加删除缓存功能！|更改GUI按键布局|增加保全作业相关及作业相关|无法执行任何操作的BUG
 ==notice
-download==https://raw.iqiq.io/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%882.11.exe==download
+download==https://raw.iqiq.io/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%882.12.exe==download
 dl2==ALL-2023-06-17-18-55-05.zip==dl2
