--- a/Version.ini
+++ b/Version.ini
@@ -1,6 +1,6 @@
-version==2.14==version
+version==2.15==version
 notice==
-更新内容：|增加【全局下载选项】|增加ADB相关|增加运行库安装教程下载
+更新内容：|修复ADB路径含有空格时无法正常运行
 ==notice
-download==https://raw.iqiq.io/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%882.14.exe==download
+download==https://raw.iqiq.io/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%882.15.exe==download
 dl2==ALL-2023-06-17-18-55-05.zip==dl2
