--- a/Version.ini
+++ b/Version.ini
@@ -2,5 +2,5 @@ version==3.5==version
 notice==
 更新内容：|紧急修复：程序路径含有空格时无法下载|修复：ADB、自动更新相关BUG、官服下载出错|优化：强制替换失败逻辑、选择路径时提示、自动更新提示、自动更新自动多镜像更新|增加：明日方舟APK下载页面打开|GUI：更紧凑型GUI
 ==notice
-download==https://raw.iqiq.io/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%883.5.exe==download
+download==https://raw.fastgit.ixmu.net/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%883.5.exe==download
 dl2==ALL-2023-06-17-18-55-05.zip==dl2
