--- a/Version.ini
+++ b/Version.ini
@@ -1,6 +1,6 @@
-version==3.7==version
+version==3.8==version
 notice==
-更新内容：|紧急修复：程序路径含有空格时无法下载||修复：ADB、自动更新相关BUG、官服下载出错|优化：强制替换失败逻辑、选择路径时提示、自动更新提示、自动更新自动多镜像更新|增加：明日方舟APK下载页面打开|GUI：更紧凑型GUI
+更新内容：|3.8：增加调试方法，详情请见https://github.com/ntgmc/MAA-QA
 ==notice
 download==https://raw.fastgit.ixmu.net/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%883.7.exe==download
 dl2==ALL-2023-06-17-18-55-05.zip==dl2
@@ -9,4 +9,5 @@ vernowcanuse==
 3.6
 3.7
 3.8
+3.9
 ==vernowcanuse
