--- a/Version.ini
+++ b/Version.ini
@@ -1,13 +1,15 @@
-version==3.8==version
+version==3.9==version
 notice==
-更新内容：|3.8：增加调试方法，详情请见https://github.com/ntgmc/MAA-QA
+更新内容：|3.8：增加调试方法，详情请见https://github.com/ntgmc/MAA-QA|3.9：下载镜像优化，更新判断优化，新增自动删除缓存
 ==notice
 download==https://github.moeyy.xyz/https://raw.githubusercontent.com/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%883.8.exe==download
 dl2==ALL-2023-06-17-18-55-05.zip==dl2
+Prioritize==https://github.moeyy.xyz/https://raw.githubusercontent.com/ntgmc/MAA-QA/main/==Prioritize
 vernowcanuse==
 0.0
 3.6
 3.7
 3.8
 3.9
+3.10
 ==vernowcanuse
