--- a/Version.ini
+++ b/Version.ini
@@ -1,10 +1,10 @@
-version==3.13==version
+version==3.14==version
 notice==
-更新内容：|3.8：增加调试方法，详情请见https://github.com/ntgmc/MAA-QA|3.9、3.10：下载镜像优化，更新判断优化，新增自动删除缓存|3.11：修复下载文件名错误的BUG，增加保全作业路径自动检测MAA|3.12：增加手动下载选项|3.13：修复网络错误判断逻辑
+更新内容：|3.11：修复下载文件名错误的BUG，增加保全作业路径自动检测MAA|3.12：增加手动下载选项|3.13：修复网络错误判断逻辑|3.14：修复手动下载全部作业合集时出错
 ==notice
-download==https://github.moeyy.xyz/https://raw.githubusercontent.com/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%883.13.exe==download
+download==https://github.moeyy.xyz/https://raw.githubusercontent.com/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%883.14.exe==download
 dl2==ALL-2023-07-08-18-53-20.zip==dl2
 Prioritize==https://github.moeyy.xyz/https://raw.githubusercontent.com/ntgmc/MAA-QA/main/==Prioritize
 vernowcanuse==
-'0.0' '3.13'
+'0.0' '3.13' '3.14'
 ==vernowcanuse
