--- a/Version.ini
+++ b/Version.ini
@@ -1,12 +1,12 @@
-version==3.15==version
-Randomcheckcode==Q8]S,R!XJ!Jp]DrZJ0hTde+D-V!Yosu3j@jbUEV+{$0f&K'va!==Randomcheckcode
+version==3.16==version
+Randomcheckcode==v}m{QeFQT^vH1n#5EC&6B5LaK1!;lrjBCiVrg$qe@2!U9%'cH!==Randomcheckcode
 notice==
-更新内容：|3.11：修复下载文件名错误的BUG，增加保全作业路径自动检测MAA|3.12：增加手动下载选项|3.13：修复网络错误判断逻辑|3.14：修复手动下载全部作业合集时出错|3.15：优化自动更新逻辑，增加强制使用备用线路
+更新内容：|3.16：保全作业更新
 ==notice
-download==https://github.moeyy.xyz/https://raw.githubusercontent.com/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%883.15.exe==download
+download==https://github.moeyy.xyz/https://raw.githubusercontent.com/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%883.16.exe==download
 dl2==ALL-2023-08-09-19-55-52.zip==dl2
 Prioritize==https://github.moeyy.xyz/https://raw.githubusercontent.com/ntgmc/MAA-QA/main/==Prioritize
-filesize==1789952==filesize
+filesize==1806336==filesize
 vernowcanuse==
-'0.0' '3.11' '3.13' '3.14' '3.15'
+'0.0' '3.11' '3.13' '3.14' '3.15' '3.16'
 ==vernowcanuse
