--- a/Version.ini
+++ b/Version.ini
@@ -1,12 +1,12 @@
-version==3.16==version
+version==3.17==version
 Randomcheckcode==v}m{QeFQT^vH1n#5EC&6B5LaK1!;lrjBCiVrg$qe@2!U9%'cH!==Randomcheckcode
 notice==
-更新内容：|3.16：保全作业更新
+更新内容：|3.17：保全作业更新，自动更新文本调整
 ==notice
-download==https://github.moeyy.xyz/https://raw.githubusercontent.com/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%883.16.exe==download
+download==https://github.moeyy.xyz/https://raw.githubusercontent.com/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%883.17.exe==download
 dl2==ALL-2023-08-09-19-55-52.zip==dl2
 Prioritize==https://github.moeyy.xyz/https://raw.githubusercontent.com/ntgmc/MAA-QA/main/==Prioritize
 filesize==1806336==filesize
 vernowcanuse==
-'0.0' '3.11' '3.13' '3.14' '3.15' '3.16'
+'0.0' '3.11' '3.13' '3.14' '3.15' '3.17'
 ==vernowcanuse
