--- a/Version.ini
+++ b/Version.ini
@@ -4,7 +4,7 @@ notice==
 更新内容：|3.18：保全作业更新，自动更新文本调整，增加全局广播功能
 ==notice
 download==https://github.moeyy.xyz/https://raw.githubusercontent.com/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%883.18.exe==download
-dl2==ALL-2023-08-09-19-55-52.zip==dl2
+dl2==ALL-2023-12-10-09-50-25.zip==dl2
 Prioritize==https://github.moeyy.xyz/https://raw.githubusercontent.com/ntgmc/MAA-QA/main/==Prioritize
 filesize==1810432==filesize
 vernowcanuse==
@@ -14,3 +14,5 @@ Global-Broadcasting-Opened==假==Global-Broadcasting-Opened
 Global-Broadcasting==
 测试广播
 ==Global-Broadcasting
+Copyright-statement==假==Copyright-statement
+Copyright-content==The feature has not been created until the XXX version.==Copyright-content
