--- a/Version.ini
+++ b/Version.ini
@@ -1,14 +1,14 @@
-version==3.18==version
+version==3.20==version
 Randomcheckcode==v}m{QeFQT^vH1n#5EC&6B5LaK1!;lrjBCiVrg$qe@2!U9%'cH!==Randomcheckcode
 notice==
-更新内容：|3.18：保全作业更新，自动更新文本调整，增加全局广播功能
+更新内容：|3.20：字体更改为微软雅黑，增加启动前声明，保全作业更新
 ==notice
-download==https://github.moeyy.xyz/https://raw.githubusercontent.com/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%883.18.exe==download
+download==https://github.moeyy.xyz/https://raw.githubusercontent.com/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%883.20.exe==download
 dl2==ALL-2023-12-10-10-27-31.zip==dl2
 Prioritize==https://github.moeyy.xyz/https://raw.githubusercontent.com/ntgmc/MAA-QA/main/==Prioritize
-filesize==1810432==filesize
+filesize==1822720==filesize
 vernowcanuse==
-'0.0' '3.11' '3.13' '3.14' '3.15' '3.18'
+'0.0' '3.11' '3.13' '3.14' '3.15' '3.18' '3.20'
 ==vernowcanuse
 Global-Broadcasting-Opened==假==Global-Broadcasting-Opened
 Global-Broadcasting==
