--- a/Version.ini
+++ b/Version.ini
@@ -1,14 +1,14 @@
-version==3.21==version
+version==3.22==version
 Randomcheckcode==v}m{QeFQT^vH1n#5EC&6B5LaK1!;lrjBCiVrg$qe@2!U9%'cH!==Randomcheckcode
 notice==
-更新内容：|3.11：修复下载文件名错误的BUG，增加保全作业路径自动检测MAA|3.12：增加手动下载选项|3.13：修复网络错误判断逻辑|3.14：修复手动下载全部作业合集时出错|3.15：优化自动更新逻辑，增加强制使用备用线路|3.16：保全作业更新|3.17：保全作业更新，自动更新文本调整|3.18：保全作业更新，自动更新文本调整，增加全局广播功能|3.20：字体更改为微软雅黑，增加启动前声明，保全作业更新|3.21：更新优化-仅显示新版本更新信息
+更新内容：|3.11：修复下载文件名错误的BUG，增加保全作业路径自动检测MAA|3.12：增加手动下载选项|3.13：修复网络错误判断逻辑|3.14：修复手动下载全部作业合集时出错|3.15：优化自动更新逻辑，增加强制使用备用线路|3.16：保全作业更新|3.17：保全作业更新，自动更新文本调整|3.18：保全作业更新，自动更新文本调整，增加全局广播功能|3.20：字体更改为微软雅黑，增加启动前声明，保全作业更新|3.21：更新优化-仅显示新版本更新信息|3.22：增加Net8.0下载
 ==notice
-download==https://github.moeyy.xyz/https://raw.githubusercontent.com/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%883.20.exe==download
+download==https://github.moeyy.xyz/https://raw.githubusercontent.com/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%883.22.exe==download
 dl2==ALL-2023-12-10-10-27-31.zip==dl2
 Prioritize==https://github.moeyy.xyz/https://raw.githubusercontent.com/ntgmc/MAA-QA/main/==Prioritize
 filesize==1822720==filesize
 vernowcanuse==
-'0.0' '3.11' '3.13' '3.14' '3.15' '3.18' '3.20' '3.21'
+'0.0' '3.11' '3.13' '3.14' '3.15' '3.18' '3.20' '3.22'
 ==vernowcanuse
 Global-Broadcasting-Opened==假==Global-Broadcasting-Opened
 Global-Broadcasting==
