--- a/Version.ini
+++ b/Version.ini
@@ -10,9 +10,9 @@ filesize==1822720==filesize
 vernowcanuse==
 '0.0' '3.11' '3.13' '3.14' '3.15' '3.18' '3.20' '3.22'
 ==vernowcanuse
-Global-Broadcasting-Opened==假==Global-Broadcasting-Opened
+Global-Broadcasting-Opened==真==Global-Broadcasting-Opened
 Global-Broadcasting==
-测试广播
+MAA5.0.0版本开始要使用NET8.0运行库，未安装的请尽快安装
 ==Global-Broadcasting
 Copyright-statement==假==Copyright-statement
 Copyright-content==The feature has not been created until the XXX version.==Copyright-content
