--- a/Version.ini
+++ b/Version.ini
@@ -1,9 +1,9 @@
-version==4.2==version
+version==4.3==version
 Randomcheckcode==v}m{QeFQT^vH1n#5EC&6B5LaK1!;lrjBCiVrg$qe@2!U9%'cH!==Randomcheckcode
 notice==
-更新内容：|3.11：修复下载文件名错误的BUG，增加保全作业路径自动检测MAA|3.12：增加手动下载选项|3.13：修复网络错误判断逻辑|3.14：修复手动下载全部作业合集时出错|3.15：优化自动更新逻辑，增加强制使用备用线路|3.16：保全作业更新|3.17：自动更新文本调整|3.18：增加全局广播功能|3.20：字体更改为微软雅黑，增加启动前声明，保全作业更新|3.21：更新优化-仅显示新版本更新信息|3.22：增加Net8.0下载|3.23：广播&声明逻辑优化|3.24：增加软件打开次数显示，更新程序更新至3.0|4.0：修改数据格式为json，下载地址改为在线更新，官服和B服APK改为直接下载|4.1：修复信息框未关闭而关闭程序时异常占用CPU的问题，修复网络连接失败的问题|4.2：新增蓝奏云直链下载，优化下载程序，修复手动下载无法获取链接，修复更新内容错误显示旧版本内容
+更新内容：|3.11：修复下载文件名错误的BUG，增加保全作业路径自动检测MAA|3.12：增加手动下载选项|3.13：修复网络错误判断逻辑|3.14：修复手动下载全部作业合集时出错|3.15：优化自动更新逻辑，增加强制使用备用线路|3.16：保全作业更新|3.17：自动更新文本调整|3.18：增加全局广播功能|3.20：字体更改为微软雅黑，增加启动前声明，保全作业更新|3.21：更新优化-仅显示新版本更新信息|3.22：增加Net8.0下载|3.23：广播&声明逻辑优化|3.24：增加软件打开次数显示，更新程序更新至3.0|4.0：修改数据格式为json，下载地址改为在线更新，官服和B服APK改为直接下载|4.1：修复信息框未关闭而关闭程序时异常占用CPU的问题，修复网络连接失败的问题|4.2：新增蓝奏云直链下载，优化下载程序，修复手动下载无法获取链接，修复更新内容错误显示旧版本内容|4.3：优化程序大小，部分功能重构，保全作业改为在线下载，删除NET4.8下载按键
 ==notice
-download==https://github.moeyy.xyz/https://raw.githubusercontent.com/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%884.2.exe==download
+download==https://github.moeyy.xyz/https://raw.githubusercontent.com/ntgmc/MAA-QA/main/MAA%E5%90%84%E7%A7%8D%E9%97%AE%E9%A2%98%E8%A7%A3%E5%86%B3%E6%96%B9%E6%A1%884.3.exe==download
 dl2==ALL-2023-12-10-10-27-31.zip==dl2
 Prioritize==https://github.moeyy.xyz/https://raw.githubusercontent.com/ntgmc/MAA-QA/main/==Prioritize
 filesize==1888256==filesize
